--- a/public/index.html
+++ b/public/index.html
@@ -3,11 +3,10 @@
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width,initial-scale=1,shrink-to-fit=no">
-  <meta name="theme-color" content="#000000">
 </head>
 
 <body>
-  <div id="container" style="padding:24px" />
+  <div id="container" style="padding:24px;width:100%;height: 100%;" />
   <script>window.prefabPath = "/AviaBC2Navigation.prefab"</script>
   <!-- <script defer="defer" src="/static/js/main.js"></script> -->
 </body>
